# NanoControl

./: .gitignore  README.md  bootstrap_env.py  pyproject.toml  require.txt  setup.py
src/: server.py  utils.py
src/frontend/: index.html
src/frontend/script/: main.js
src/frontend/style/: main.css
src/nanoControl/: main.py  server.py
src/nanoControl/actions/: keyboard.py  mouse.py
src/nanoControl/vision/: parser.py  screen.py
src/nanocontrol.egg-info/: PKG-INFO  SOURCES.txt
src/vision/: parser.py  private_parser.py  screen.py
tests/: test_parser.py  test_vision.py
